<resources>
    <string name="app_name">Trivia</string>
    <string name="dashboard_text">Welcome to your account</string>
    <string name="training_style">Training Module</string>
    <string name="competitive_style">Competitive Game</string>
    <string name="time_left">Time left</string>
    <string name="domain">Choose the desired topic</string>
    <string name="op_to_join">Wait for the opponent to join</string>
    <string name="cancel_room_or_not">Wait for opponent or leave your game?</string>
    <string name="leave_room">Leave Room</string>
    <string name="view_invites_or_not">You\'ve got new invites!</string>
    <string name="looking_for_player">Looking for player to join you...</string>
    <string name="geo">GEOGRAPHY</string>
    <string name="createRoom">Create Room</string>
    <string name="createyouRoom">Create your room here</string>
    <string name="backHome">Home Screen</string>
    <string name="historyT">HISTORY</string>
    <string name="topic">TOPIC</string>
    <string name="points">Points: </string>
    <string name="message">CONGRATULATIONS!</string>
    <string name="yourScore">Final Score: </string>
    <string name="scienceT">SCIENCE</string>
    <string name="arts">ARTS &amp; SPORTS</string>
    <string name="movie">MOVIES &amp; CELEBRITIES</string>
    <string name="trivia_textbox">Test your knowledge in this Trivia Quiz Game</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="tie">It\'s a tie!</string>
    <string name="enter_username">Enter username</string>
    <string name="create_user">Create user</string>
    <string name="password">Type your password</string>
    <string name="newPassword">Type new password</string>
    <string name="login">Login</string>
    <string name="test_your">Test your</string>
    <string name="knowledge_in_this">knowledge in this</string>
    <string name="trivia_game">Trivia Game</string>
    <string name="view_profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="question_factory">Question Factory</string>
    <string name="geography">Geography</string>
    <string name="choose_a_domain">Choose a domain</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="movies_celebrities"><![CDATA[Movies & Celebrities]]></string>
    <string name="question_suggestion">Suggest a question</string>
    <string name="arts_sports"><![CDATA[Arts & Sports]]></string>
    <string name="register">Register</string>
    <string name="right_answer">Right answer</string>
    <string name="type_right_answer">Type right answer</string>
    <string name="wrong_answer_1">Wrong answer 1</string>
    <string name="wrong_answer_2">Wrong answer 2</string>
    <string name="wrong_answer_3">Wrong answer 3</string>
    <string name="send">SEND</string>
    <string name="createQA"><![CDATA[Congrats! You have successfully created a Trivia Q & A!]]></string>
    <string name="log_out">Log out</string>
    <string name="invite">Invite</string>
    <string name="add_new_friend">Add friend</string>
    <string name="ok">Ok</string>
    <string name="active_rooms">Active Rooms</string>
    <string name="q_a_empty">Question / Answer is empty !</string>
    <string name="friend_succ_added">Friend successfully added!</string>
    <string name="points_friendslist"> points</string>
    <string name="luck_next_time">Better Luck Next Time!</string>
    <string name="not_trivia_user">This is not a Trivia User!</string>
    <string name="friend_name_empty">Friend name is empty</string>
    <string name="user_pass_empty">User or Password empty</string>
    <string name="user_already_exists">The user already exists</string>
    <string name="succ_created_account">You have successfully created you account</string>
    <string name="cancel">Cancel</string>
    <string name="rate_a_question">Rate a question</string>
    <string name="suggest_a_question">Suggest a question</string>
    <string name="retype_password">Retype password</string>
    <string name="not_match_pass">Password not matching</string>
    <string name="hurry_up">Hurry Up!!!</string>
    <string name="register_invalid_format">Username or password format is invalid</string>
    <string name="friend_succ_del">Friend successfully deleted</string>
    <string name="sure_delete_friend">Are you sure you want to remove </string>
    <string name="sure_invite">Are you sure you want to invite</string>
    <string name="your_invites">Your invites</string>
    <string name="dashboard">Dashboard</string>
    <string name="domain_empty">Domain is empty. Please, choose a domain!</string>
    <string name="double_back_click_msg">Please click BACK again to exit Trivia</string>
    <string name="lets_take_a_quiz">Let\'s take a quiz, </string>
</resources>
