<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Item_Profile"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/view_profile"
        android:visible="true"
        android:textColor="@color/colorPrimaryDark"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/Item_Friends"
        android:textColor="@color/colorPrimaryDark"
        android:title="@string/friends" />
    <item
        android:id="@+id/Item_QSuggestion"
        android:textColor="@color/colorPrimaryDark"
        android:title="@string/question_factory" />
    <item
        android:id="@+id/Item_Logout"
        android:title="@string/log_out" />
</menu>