<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".QFactoryActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"

        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="631dp"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/questionImg"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            app:srcCompat="@drawable/ask" />

        <Button
            android:id="@+id/suggestQButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/suggest_a_question"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"


        android:layout_marginTop="200dp"
        android:layout_marginBottom="531dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="9.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/starImg"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            app:srcCompat="@drawable/rating" />

        <Button
            android:id="@+id/rateQButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/rate_a_question"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>