<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Green"
        android:textSize="20sp"
        android:text="welcome text!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <LinearLayout
        android:id="@+id/linearLayout2"

        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="631dp"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="10.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/questionImg"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            app:srcCompat="@drawable/training" />

        <Button
            android:id="@+id/training"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/training_style"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"


        android:layout_height="100dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="531dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="9.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/starImg"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            app:srcCompat="@drawable/vs" />

        <Button
            android:id="@+id/competitive"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/competitive_style"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="8.0dip"
        android:paddingEnd="4.0dip"
        android:paddingRight="1.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/gamepad" />

        <Button
            android:id="@+id/inviteRoom"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Your Invites"
            android:textColor="@color/colorPrimary"
            tools:text="Your Invites" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>